--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "node-audiorecorder": "^2.2.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
